<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MinChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="accountImageView">帐号：</string>
	<string name="accountEditTextHint">请输入帐号</string>
	<string name="ImageViewContentDescription">两个人在谈话的照片</string>
	<string name="passwdImageView">密码：</string>
	<string name="passwdEditTextHint">请输入密码</string>
	<string name="loginButton">登陆</string>
	<string name="bottomMarqeeTextView">这是广告&#8230;这真的是广告&#8230;这也是广告&#8230;这也真的是广告&#8230;好吧！其实是滚动播放测试&#8230;</string>
	<string name="registButtom">注册</string>
	<string name="registTextView">新用户注册</string>
	<string name="registAccountTextView">新帐号：</string>
	<string name="registPasswdTextView">新密码：</string>
	<string name="registSubmitButton">提交</string>
	<string name="registPasswdEditTextHint">请输入新密码</string>
	<string name="registAccountEditTextHint">请输入手机号</string>








</resources>
